working on 1.1 again
git-svn-id: https://sitemapgen4j.googlecode.com/svn/trunk@12 aa787bee-eda5-11dd-ada0-abde575de245

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.redfin</groupId>
   <artifactId>sitemapgen4j</artifactId>
   <packaging>jar</packaging>
-  <version>1.0.1</version>
+  <version>1.1-SNAPSHOT</version>
   <name>SitemapGen4J</name>
   <build>
     <defaultGoal>install</defaultGoal>
