Configure distributionManagement for deploy to maven repo
git-svn-id: https://sitemapgen4j.googlecode.com/svn/trunk@15 aa787bee-eda5-11dd-ada0-abde575de245

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+        <id>sitemapgen4j-releases</id>
+        <url>file://${basedir}/../site/repo</url>
+    </repository>
+  </distributionManagement>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
