--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,19 @@
   <version>1.1-SNAPSHOT</version>
   <name>SitemapGen4J</name>
   <url>http://code.google.com/p/sitemapgen4j/</url>
+  <description>SitemapGen4j is an XML sitemap generator written in Java.</description>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <connection>scm:svn:http://sitemapgen4j.googlecode.com/svn/trunk/</connection>
+    <developerConnection>scm:svn:https://sitemapgen4j.googlecode.com/svn/trunk/</developerConnection>
+    <url>http://code.google.com/p/sitemapgen4j/source/browse/</url>
+  </scm>
   <build>
     <defaultGoal>install</defaultGoal>
     <plugins>
