--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
     <developerConnection>scm:git:git@github.com:dfabulich/sitemapgen4j.git</developerConnection>
     <url>https://github.com/dfabulich/sitemapgen4j/</url>
   </scm>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <developers>
     <developer>
       <id>dfabulich</id>
@@ -35,6 +38,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
