--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.github.dfabulich</groupId>
+    <groupId>com.github.TomWalbers</groupId>
   <artifactId>sitemapgen4j</artifactId>
   <packaging>jar</packaging>
   <version>1.0.7-SNAPSHOT</version>
